--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: lidong8421bcd@gmail.com
   facebook:
   flickr:
-  github: DoongLi
+  github: doongli
   instagram:
   linkedin:
   pinterest:
