--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Dong Li
+name: Frankie Dong Li
 
 # Short bio or description (displayed in the header)
 # description: the profile of an engineer, researcher and software developer
